# StoryForge2

./: .gitattributes  AGENTS.md  README.md  TODO.md  package-lock.json
.claude/: launch.json
apps/desktop/: index.html  package.json
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 20260612010000_world_workspace.sql  20260613010000_plan_versions_and_scenes.sql  20260613020000_nullable_scene_chapters.sql  20260613090000_persistent_ai_proposals.sql  20260703010000_merge_logline_into_premise.sql  20260703020000_scene_time_marker.sql  20260703030000_scene_snapshots.sql  20260703040000_search_index.sql  20260704010000_continuity_summaries.sql  20260706010000_scene_critiques.sql  20260707010000_character_appearance_thread_resolution.sql  20260709010000_ai_run_token_usage.sql
apps/desktop/src-tauri/src/: ai_settings.rs  lib.rs  providers.rs
apps/desktop/src/app/: ProjectShell.tsx  router.tsx  themeStore.ts
apps/desktop/src/features/ai/: AiLogPage.test.tsx  AiLogPage.tsx  AiPromptContextPanel.tsx  AiProposalPanel.tsx  AiProviderStatusPanel.tsx  AiSettingsPage.tsx  CodexStatusPanel.tsx  CoverImageLightbox.tsx  aiPromptContextStore.ts  brainstormPromptPackage.ts  characterPromptPackage.ts  conceptFieldSuggestion.test.ts  conceptFieldSuggestion.ts  continuitySummaryPromptPackage.ts  continuitySummaryService.ts  coverPromptPackage.ts  modelJson.ts  planPromptPackage.test.ts  planPromptPackage.ts  planProposalApplication.test.ts  planProposalApplication.ts  premiseDevelopment.test.ts  premiseDevelopment.ts  pricing.test.ts  pricing.ts  (+20 more)
apps/desktop/src/styles/: components.css  tokens.css
docs/: ai-audit.md  plan-flow-analysis.html  plan-flow-analysis.md  storyforge2-ui-design-system-v2.html  storyforge2-ui-design-system.html  ui-redesign-mockup.html  ui-redesign-plan.md
docs/blueprint/: 06_prompt_architecture.md  07_ux_i_nawigacja.md
(+56 files in other folders)
