[package]
name = "storyforge2-desktop"
version = "0.1.0"
description = "StoryForge2 desktop shell"
authors = ["StoryForge2"]
edition = "2021"

[lib]
name = "storyforge2_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "json", "macros", "runtime-tokio-rustls", "sqlite"] }
tauri = { version = "2", features = ["protocol-asset"] }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
