[package]
name = "storyforge2-desktop"
version = "0.1.0"
description = "Bowri desktop shell"
authors = ["Bowri"]
edition = "2021"

[lib]
name = "storyforge2_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
sqlx = { version = "0.8", features = ["chrono", "json", "macros", "runtime-tokio-rustls", "sqlite"] }
tauri = { version = "2", features = ["protocol-asset"] }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
